Change GitHub npm auth token reference
Updated the authentication token for GitHub npm registry.

--- a/private_dot_npmrc.tmpl
+++ b/private_dot_npmrc.tmpl
@@ -1,6 +1,6 @@
 @snaveevans:registry=https://npm.pkg.github.com
 @octanner:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken={{ (bitwardenFields "item" "github.com").access_token.value }}
+//npm.pkg.github.com/:_authToken={{ (bitwardenFields "item" "ebac9653-5fbd-4dac-b22d-af9a0116b6bb").access_token.value }}
 
 @octanner-ui:registry=https://artifactory.octanner.net/api/npm/oct-npmjs/
 //artifactory.octanner.net/api/npm/oct-npmjs/:email={{ (bitwardenFields "item" "artifactory.octanner.net").email.value }}
