fix: bw and add synthetic api env

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -10,6 +10,7 @@ export PATH
 export EDITOR=nvim
 export LANG="en_US.UTF-8"
 export BAT_THEME="TwoDark"
+export SYNTHETIC_NEW_TOKEN="{{ (bitwardenFields "item" "synthetic.new").token.value }}"
 
 export FZF_BASE="$(which fzf)"
 export FZF_DEFAULT_COMMAND="rg --files"
